--- a/tknamazu/ChangeLog
+++ b/tknamazu/ChangeLog
@@ -1,3 +1,8 @@
+1999-12-19  Ryuji Abe <raeva@t3.rim.or.jp>
+
+	* Makefile.am: Removed unnessesary `@SET_MAKE@'.
+	(pkgdatadir): Removed.
+
 1999-11-03  Ken-ichi Hirose <kenzo-@@tama.or.jp>
 
     * configure.in(AC_OUTPUT): add tknamazurc.
