--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-12-23  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* nmz/libnamazu.h: Change QUERY_TOKEN_MAX: 16 -> 32.
+
 1999-12-21  Makoto Fujiwara  <makoto@ki.nu>
 
 	* po/Makefile.in.in: Add $(srcdir)/ to let BSD make work.
