--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1999-12-29  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* filter/Makefile.am (AUTOMAKE_OPTIONS): 1.4.
+	(ETAGS_ARGS): Handling perl scripts.
+
+	* pl/Makefile.am: Likewise.
+	(COMMONDATA): Removed.
+
 1999-12-27  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* scripts/mknmz.pl.in: Set autoflush(1) to STDERR.
