--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-01-03  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* pl/gettext.pl.in: Added new file.
+
 1999-12-31  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* scripts/mknmz.pl.in (setup_magic): Fix a regex pattern. 
