--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2000-01-03  Ryuji Abe <raeva@t3.rim.or.jp>
 
+	* acinclude.m4 (AM_WITH_CCMALLOC): Tiny Fix.
+
+	* nmz/Makefile.am (AUTOMAKE_OPTIONS): Set 1.4.
+	(libnmz_la_LDFLAGS): Set -version-info 1:0:0 for 
+	backward conpatibility.
+
 	* pl/Makefile.am (localedir): Set $(datadir)/locale.
 	(gettext.pl): Generated when make all.
 
