--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
 
 	* pl/Makefile.am (localedir): Set $(datadir)/locale.
 	(gettext.pl): Generated when make all.
+	(perllib_DATA): Added gettext.pl.
+	(EXTRA_DIST): Added gettext.pl.in.
 
 	* pl/gettext/pl.in: Changed $(localedir) from 
 	@prefix@/share/locale to %LOCALEDIR%.
