--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-01-05  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* scripts/mailutime.in: Fix Y2K bug. (handling 00)
+
 2000-01-04  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* filter/man.pl (filter): Make groff output one paragraph per one
