--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2000-01-06  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* Makefile.in.in (ADDITIONAL_FILES):
+	s/make_jis7_jp.in/make_iso-2022-jp_jp.in/g 
+
 1999-12-09  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* ja.po: Update messages.
