--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2000-01-06  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* Makefile.am (EXTRA_DIST): Add INSTALL-ja.
+
+	* INSTALL-ja: New file.
+	<http://www.sra.co.jp/people/m-kasahr/install/INSTALL-ja>
+
 	* nmz/libnamazu.h (struct nmz_indices): Change member names.
 
 	* nmz/idxname.c: Use static struct nmz_indices indices = {0}
