--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-01-07  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* nmz/codeconv.c: Include <errno.h>
+
 	* nmz/hlist.c (realloc_hlist): Use strerror().
 
 	* nmz/search.c (normalize_idxnames): Make it not call nmz_die().
