--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2000-01-08  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* nmz/util.c (nmz_strerror): Renamed from nmz_get_errnmsg().
+	(nmz_strerror): Use assert().
+	All callers changed.	
+
 	* nmz/rcfile.c (is_valid_argnum): Use assert(0) instead of 
 	MUST_NOT_BE_HERE() macro. 
 	
