--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2000-01-09  Ryuji Abe <raeva@t3.rim.or.jp>
 
-	* po/make_iso-2022-jp_po.in: Replace % -> %% before convert charset.
+	* po/make_iso-2022-jp_po.in: Quit replace % -> %%.
 
 2000-01-08  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
