Fix typo in a message.

--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-01-08 18:17+0900\n"
+"POT-Creation-Date: 2000-01-08 19:16+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -173,7 +173,8 @@ msgid ""
 "    -o, --output=file    set output file name.\n"
 "    -f, --config=file    set a pathname of a config file.\n"
 "    -C, --show-config    print current configuration.\n"
-"    -q, --quiet          do not display extra messages except search results.\n"
+"    -q, --quiet          do not display extra messages except search "
+"results.\n"
 "    -L, --lang=lang      set language (ja or en)\n"
 "    -v, --version        show the version of namazu and exit.\n"
 "        --help           show this help and exit\n"
@@ -216,7 +217,7 @@ msgstr "使い方: namazu [オプション] <検索式> [インデックス]...\n"
 
 #: src/usage.c:92
 msgid "Try `namazu --help' for more information.\n"
-msgstr "`namazu --help' でより詳しい情報がが表示されます\n"
+msgstr "`namazu --help' でより詳しい情報が表示されます\n"
 
 #~ msgid ""
 #~ "\t<h2>Error!</h2>\n"
